// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render matches snapshot 1`] = `
<Fragment>
  <div
    className="App step2"
  >
    <Header
      text="join the list"
    />
    <div>
      <Text
        type="h2"
      >
        <Text
          type="span"
        >
          Almost Done! Please Enter
        </Text>
        <Text
          type="span"
        >
          Your First and Last Name.
        </Text>
      </Text>
      <div
        className="inputWrapper"
      >
        <div>
          <TextInput
            onChange="onClick"
            placeholder="First Name"
            valid={false}
            value=""
          />
          <TextInput
            onChange="onClick"
            placeholder="Last Name"
            valid={false}
            value=""
          />
        </div>
        <Button
          disabled={true}
          text="Sign up"
        />
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`render with data matches snapshot 1`] = `
<Fragment>
  <div
    className="App step2"
  >
    <Header
      text="join the list"
    />
    <div>
      <Text
        type="h2"
      >
        <Text
          type="span"
        >
          Almost Done! Please Enter
        </Text>
        <Text
          type="span"
        >
          Your First and Last Name.
        </Text>
      </Text>
      <div
        className="inputWrapper"
      >
        <div>
          <TextInput
            onChange="onClick"
            placeholder="First Name"
            valid={false}
            value="john"
          />
          <TextInput
            onChange="onClick"
            placeholder="Last Name"
            valid={false}
            value="smith"
          />
        </div>
        <Button
          disabled={true}
          text="Sign up"
        />
      </div>
    </div>
  </div>
</Fragment>
`;
